ProyectoCompi1/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    RBREAK
    RCASE
    RCHAR
    RCONTINUE
    RDEFAULT
    RFOR
    RFUNC
    RLENGTH
    RMAIN
    RNULL
    RREAD
    RRETURN
    RROUND
    RSWITCH
    RTOLOWER
    RTOUPPER
    RTRUNCATE
    RTYPEOF
    RWHILE

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> imprimir_instr finins
Rule 5     instruccion -> declaracion_instr finins
Rule 6     instruccion -> asignacion_instr finins
Rule 7     instruccion -> if_instr
Rule 8     finins -> PUNTOCOMA
Rule 9     finins -> <empty>
Rule 10    instruccion -> error PUNTOCOMA
Rule 11    imprimir_instr -> RPRINT PARA expresion PARC PUNTOCOMA
Rule 12    imprimir_instr -> RPRINT PARA expresion PARC
Rule 13    declaracion_instr -> tipo ID IGUAL expresion
Rule 14    asignacion_instr -> ID IGUAL expresion
Rule 15    if_instr -> RIF PARA expresion PARC LLAVEA instrucciones LLAVEC
Rule 16    if_instr -> RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE LLAVEA instrucciones LLAVEC
Rule 17    if_instr -> RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE if_instr
Rule 18    tipo -> RINT
Rule 19    tipo -> RFLOAT
Rule 20    tipo -> RSTRING
Rule 21    tipo -> RBOOLEAN
Rule 22    expresion -> expresion MAS expresion
Rule 23    expresion -> expresion MENOS expresion
Rule 24    expresion -> expresion POR expresion
Rule 25    expresion -> expresion DIV expresion
Rule 26    expresion -> expresion POT expresion
Rule 27    expresion -> expresion MOD expresion
Rule 28    expresion -> expresion MENORQUE expresion
Rule 29    expresion -> expresion MAYORQUE expresion
Rule 30    expresion -> expresion IGUALIGUAL expresion
Rule 31    expresion -> expresion DIFERENTE expresion
Rule 32    expresion -> expresion MAYORIGUAL expresion
Rule 33    expresion -> expresion MENORIGUAL expresion
Rule 34    expresion -> expresion AND expresion
Rule 35    expresion -> expresion OR expresion
Rule 36    expresion -> MENOS expresion
Rule 37    expresion -> NOT expresion
Rule 38    expresion -> PARA expresion PARC
Rule 39    expresion -> ID
Rule 40    expresion -> CHARACTER
Rule 41    expresion -> BOOLEANO
Rule 42    expresion -> ENTERO
Rule 43    expresion -> DECIMAL
Rule 44    expresion -> CADENA

Terminals, with rules where they appear

AND                  : 34
BOOLEANO             : 41
CADENA               : 44
CHARACTER            : 40
DECIMAL              : 43
DIFERENTE            : 31
DIV                  : 25
ENTERO               : 42
ID                   : 13 14 39
IGUAL                : 13 14
IGUALIGUAL           : 30
LLAVEA               : 15 16 16 17
LLAVEC               : 15 16 16 17
MAS                  : 22
MAYORIGUAL           : 32
MAYORQUE             : 29
MENORIGUAL           : 33
MENORQUE             : 28
MENOS                : 23 36
MOD                  : 27
NOT                  : 37
OR                   : 35
PARA                 : 11 12 15 16 17 38
PARC                 : 11 12 15 16 17 38
POR                  : 24
POT                  : 26
PUNTOCOMA            : 8 10 11
RBOOLEAN             : 21
RBREAK               : 
RCASE                : 
RCHAR                : 
RCONTINUE            : 
RDEFAULT             : 
RELSE                : 16 17
RFLOAT               : 19
RFOR                 : 
RFUNC                : 
RIF                  : 15 16 17
RINT                 : 18
RLENGTH              : 
RMAIN                : 
RNULL                : 
RPRINT               : 11 12
RREAD                : 
RRETURN              : 
RROUND               : 
RSTRING              : 20
RSWITCH              : 
RTOLOWER             : 
RTOUPPER             : 
RTRUNCATE            : 
RTYPEOF              : 
RWHILE               : 
error                : 10

Nonterminals, with rules where they appear

asignacion_instr     : 6
declaracion_instr    : 5
expresion            : 11 12 13 14 15 16 17 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 37 38
finins               : 4 5 6
if_instr             : 7 17
imprimir_instr       : 4
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 15 16 16 17
tipo                 : 13

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . imprimir_instr finins
    (5) instruccion -> . declaracion_instr finins
    (6) instruccion -> . asignacion_instr finins
    (7) instruccion -> . if_instr
    (10) instruccion -> . error PUNTOCOMA
    (11) imprimir_instr -> . RPRINT PARA expresion PARC PUNTOCOMA
    (12) imprimir_instr -> . RPRINT PARA expresion PARC
    (13) declaracion_instr -> . tipo ID IGUAL expresion
    (14) asignacion_instr -> . ID IGUAL expresion
    (15) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC
    (16) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE LLAVEA instrucciones LLAVEC
    (17) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE if_instr
    (18) tipo -> . RINT
    (19) tipo -> . RFLOAT
    (20) tipo -> . RSTRING
    (21) tipo -> . RBOOLEAN

    error           shift and go to state 8
    RPRINT          shift and go to state 9
    ID              shift and go to state 11
    RIF             shift and go to state 12
    RINT            shift and go to state 13
    RFLOAT          shift and go to state 14
    RSTRING         shift and go to state 15
    RBOOLEAN        shift and go to state 16

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir_instr                 shift and go to state 4
    declaracion_instr              shift and go to state 5
    asignacion_instr               shift and go to state 6
    if_instr                       shift and go to state 7
    tipo                           shift and go to state 10

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . imprimir_instr finins
    (5) instruccion -> . declaracion_instr finins
    (6) instruccion -> . asignacion_instr finins
    (7) instruccion -> . if_instr
    (10) instruccion -> . error PUNTOCOMA
    (11) imprimir_instr -> . RPRINT PARA expresion PARC PUNTOCOMA
    (12) imprimir_instr -> . RPRINT PARA expresion PARC
    (13) declaracion_instr -> . tipo ID IGUAL expresion
    (14) asignacion_instr -> . ID IGUAL expresion
    (15) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC
    (16) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE LLAVEA instrucciones LLAVEC
    (17) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE if_instr
    (18) tipo -> . RINT
    (19) tipo -> . RFLOAT
    (20) tipo -> . RSTRING
    (21) tipo -> . RBOOLEAN

    $end            reduce using rule 1 (init -> instrucciones .)
    error           shift and go to state 8
    RPRINT          shift and go to state 9
    ID              shift and go to state 11
    RIF             shift and go to state 12
    RINT            shift and go to state 13
    RFLOAT          shift and go to state 14
    RSTRING         shift and go to state 15
    RBOOLEAN        shift and go to state 16

    instruccion                    shift and go to state 17
    imprimir_instr                 shift and go to state 4
    declaracion_instr              shift and go to state 5
    asignacion_instr               shift and go to state 6
    if_instr                       shift and go to state 7
    tipo                           shift and go to state 10

state 3

    (3) instrucciones -> instruccion .

    error           reduce using rule 3 (instrucciones -> instruccion .)
    RPRINT          reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    RIF             reduce using rule 3 (instrucciones -> instruccion .)
    RINT            reduce using rule 3 (instrucciones -> instruccion .)
    RFLOAT          reduce using rule 3 (instrucciones -> instruccion .)
    RSTRING         reduce using rule 3 (instrucciones -> instruccion .)
    RBOOLEAN        reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LLAVEC          reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> imprimir_instr . finins
    (8) finins -> . PUNTOCOMA
    (9) finins -> .

    PUNTOCOMA       shift and go to state 19
    error           reduce using rule 9 (finins -> .)
    RPRINT          reduce using rule 9 (finins -> .)
    ID              reduce using rule 9 (finins -> .)
    RIF             reduce using rule 9 (finins -> .)
    RINT            reduce using rule 9 (finins -> .)
    RFLOAT          reduce using rule 9 (finins -> .)
    RSTRING         reduce using rule 9 (finins -> .)
    RBOOLEAN        reduce using rule 9 (finins -> .)
    $end            reduce using rule 9 (finins -> .)
    LLAVEC          reduce using rule 9 (finins -> .)

    finins                         shift and go to state 18

state 5

    (5) instruccion -> declaracion_instr . finins
    (8) finins -> . PUNTOCOMA
    (9) finins -> .

    PUNTOCOMA       shift and go to state 19
    error           reduce using rule 9 (finins -> .)
    RPRINT          reduce using rule 9 (finins -> .)
    ID              reduce using rule 9 (finins -> .)
    RIF             reduce using rule 9 (finins -> .)
    RINT            reduce using rule 9 (finins -> .)
    RFLOAT          reduce using rule 9 (finins -> .)
    RSTRING         reduce using rule 9 (finins -> .)
    RBOOLEAN        reduce using rule 9 (finins -> .)
    $end            reduce using rule 9 (finins -> .)
    LLAVEC          reduce using rule 9 (finins -> .)

    finins                         shift and go to state 20

state 6

    (6) instruccion -> asignacion_instr . finins
    (8) finins -> . PUNTOCOMA
    (9) finins -> .

    PUNTOCOMA       shift and go to state 19
    error           reduce using rule 9 (finins -> .)
    RPRINT          reduce using rule 9 (finins -> .)
    ID              reduce using rule 9 (finins -> .)
    RIF             reduce using rule 9 (finins -> .)
    RINT            reduce using rule 9 (finins -> .)
    RFLOAT          reduce using rule 9 (finins -> .)
    RSTRING         reduce using rule 9 (finins -> .)
    RBOOLEAN        reduce using rule 9 (finins -> .)
    $end            reduce using rule 9 (finins -> .)
    LLAVEC          reduce using rule 9 (finins -> .)

    finins                         shift and go to state 21

state 7

    (7) instruccion -> if_instr .

    error           reduce using rule 7 (instruccion -> if_instr .)
    RPRINT          reduce using rule 7 (instruccion -> if_instr .)
    ID              reduce using rule 7 (instruccion -> if_instr .)
    RIF             reduce using rule 7 (instruccion -> if_instr .)
    RINT            reduce using rule 7 (instruccion -> if_instr .)
    RFLOAT          reduce using rule 7 (instruccion -> if_instr .)
    RSTRING         reduce using rule 7 (instruccion -> if_instr .)
    RBOOLEAN        reduce using rule 7 (instruccion -> if_instr .)
    $end            reduce using rule 7 (instruccion -> if_instr .)
    LLAVEC          reduce using rule 7 (instruccion -> if_instr .)


state 8

    (10) instruccion -> error . PUNTOCOMA

    PUNTOCOMA       shift and go to state 22


state 9

    (11) imprimir_instr -> RPRINT . PARA expresion PARC PUNTOCOMA
    (12) imprimir_instr -> RPRINT . PARA expresion PARC

    PARA            shift and go to state 23


state 10

    (13) declaracion_instr -> tipo . ID IGUAL expresion

    ID              shift and go to state 24


state 11

    (14) asignacion_instr -> ID . IGUAL expresion

    IGUAL           shift and go to state 25


state 12

    (15) if_instr -> RIF . PARA expresion PARC LLAVEA instrucciones LLAVEC
    (16) if_instr -> RIF . PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE LLAVEA instrucciones LLAVEC
    (17) if_instr -> RIF . PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE if_instr

    PARA            shift and go to state 26


state 13

    (18) tipo -> RINT .

    ID              reduce using rule 18 (tipo -> RINT .)


state 14

    (19) tipo -> RFLOAT .

    ID              reduce using rule 19 (tipo -> RFLOAT .)


state 15

    (20) tipo -> RSTRING .

    ID              reduce using rule 20 (tipo -> RSTRING .)


state 16

    (21) tipo -> RBOOLEAN .

    ID              reduce using rule 21 (tipo -> RBOOLEAN .)


state 17

    (2) instrucciones -> instrucciones instruccion .

    error           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RPRINT          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RIF             reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RINT            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RFLOAT          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RSTRING         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RBOOLEAN        reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    LLAVEC          reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 18

    (4) instruccion -> imprimir_instr finins .

    error           reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RPRINT          reduce using rule 4 (instruccion -> imprimir_instr finins .)
    ID              reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RIF             reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RINT            reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RFLOAT          reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RSTRING         reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RBOOLEAN        reduce using rule 4 (instruccion -> imprimir_instr finins .)
    $end            reduce using rule 4 (instruccion -> imprimir_instr finins .)
    LLAVEC          reduce using rule 4 (instruccion -> imprimir_instr finins .)


state 19

    (8) finins -> PUNTOCOMA .

    error           reduce using rule 8 (finins -> PUNTOCOMA .)
    RPRINT          reduce using rule 8 (finins -> PUNTOCOMA .)
    ID              reduce using rule 8 (finins -> PUNTOCOMA .)
    RIF             reduce using rule 8 (finins -> PUNTOCOMA .)
    RINT            reduce using rule 8 (finins -> PUNTOCOMA .)
    RFLOAT          reduce using rule 8 (finins -> PUNTOCOMA .)
    RSTRING         reduce using rule 8 (finins -> PUNTOCOMA .)
    RBOOLEAN        reduce using rule 8 (finins -> PUNTOCOMA .)
    $end            reduce using rule 8 (finins -> PUNTOCOMA .)
    LLAVEC          reduce using rule 8 (finins -> PUNTOCOMA .)


state 20

    (5) instruccion -> declaracion_instr finins .

    error           reduce using rule 5 (instruccion -> declaracion_instr finins .)
    RPRINT          reduce using rule 5 (instruccion -> declaracion_instr finins .)
    ID              reduce using rule 5 (instruccion -> declaracion_instr finins .)
    RIF             reduce using rule 5 (instruccion -> declaracion_instr finins .)
    RINT            reduce using rule 5 (instruccion -> declaracion_instr finins .)
    RFLOAT          reduce using rule 5 (instruccion -> declaracion_instr finins .)
    RSTRING         reduce using rule 5 (instruccion -> declaracion_instr finins .)
    RBOOLEAN        reduce using rule 5 (instruccion -> declaracion_instr finins .)
    $end            reduce using rule 5 (instruccion -> declaracion_instr finins .)
    LLAVEC          reduce using rule 5 (instruccion -> declaracion_instr finins .)


state 21

    (6) instruccion -> asignacion_instr finins .

    error           reduce using rule 6 (instruccion -> asignacion_instr finins .)
    RPRINT          reduce using rule 6 (instruccion -> asignacion_instr finins .)
    ID              reduce using rule 6 (instruccion -> asignacion_instr finins .)
    RIF             reduce using rule 6 (instruccion -> asignacion_instr finins .)
    RINT            reduce using rule 6 (instruccion -> asignacion_instr finins .)
    RFLOAT          reduce using rule 6 (instruccion -> asignacion_instr finins .)
    RSTRING         reduce using rule 6 (instruccion -> asignacion_instr finins .)
    RBOOLEAN        reduce using rule 6 (instruccion -> asignacion_instr finins .)
    $end            reduce using rule 6 (instruccion -> asignacion_instr finins .)
    LLAVEC          reduce using rule 6 (instruccion -> asignacion_instr finins .)


state 22

    (10) instruccion -> error PUNTOCOMA .

    error           reduce using rule 10 (instruccion -> error PUNTOCOMA .)
    RPRINT          reduce using rule 10 (instruccion -> error PUNTOCOMA .)
    ID              reduce using rule 10 (instruccion -> error PUNTOCOMA .)
    RIF             reduce using rule 10 (instruccion -> error PUNTOCOMA .)
    RINT            reduce using rule 10 (instruccion -> error PUNTOCOMA .)
    RFLOAT          reduce using rule 10 (instruccion -> error PUNTOCOMA .)
    RSTRING         reduce using rule 10 (instruccion -> error PUNTOCOMA .)
    RBOOLEAN        reduce using rule 10 (instruccion -> error PUNTOCOMA .)
    $end            reduce using rule 10 (instruccion -> error PUNTOCOMA .)
    LLAVEC          reduce using rule 10 (instruccion -> error PUNTOCOMA .)


state 23

    (11) imprimir_instr -> RPRINT PARA . expresion PARC PUNTOCOMA
    (12) imprimir_instr -> RPRINT PARA . expresion PARC
    (22) expresion -> . expresion MAS expresion
    (23) expresion -> . expresion MENOS expresion
    (24) expresion -> . expresion POR expresion
    (25) expresion -> . expresion DIV expresion
    (26) expresion -> . expresion POT expresion
    (27) expresion -> . expresion MOD expresion
    (28) expresion -> . expresion MENORQUE expresion
    (29) expresion -> . expresion MAYORQUE expresion
    (30) expresion -> . expresion IGUALIGUAL expresion
    (31) expresion -> . expresion DIFERENTE expresion
    (32) expresion -> . expresion MAYORIGUAL expresion
    (33) expresion -> . expresion MENORIGUAL expresion
    (34) expresion -> . expresion AND expresion
    (35) expresion -> . expresion OR expresion
    (36) expresion -> . MENOS expresion
    (37) expresion -> . NOT expresion
    (38) expresion -> . PARA expresion PARC
    (39) expresion -> . ID
    (40) expresion -> . CHARACTER
    (41) expresion -> . BOOLEANO
    (42) expresion -> . ENTERO
    (43) expresion -> . DECIMAL
    (44) expresion -> . CADENA

    MENOS           shift and go to state 29
    NOT             shift and go to state 30
    PARA            shift and go to state 27
    ID              shift and go to state 31
    CHARACTER       shift and go to state 32
    BOOLEANO        shift and go to state 33
    ENTERO          shift and go to state 34
    DECIMAL         shift and go to state 35
    CADENA          shift and go to state 36

    expresion                      shift and go to state 28

state 24

    (13) declaracion_instr -> tipo ID . IGUAL expresion

    IGUAL           shift and go to state 37


state 25

    (14) asignacion_instr -> ID IGUAL . expresion
    (22) expresion -> . expresion MAS expresion
    (23) expresion -> . expresion MENOS expresion
    (24) expresion -> . expresion POR expresion
    (25) expresion -> . expresion DIV expresion
    (26) expresion -> . expresion POT expresion
    (27) expresion -> . expresion MOD expresion
    (28) expresion -> . expresion MENORQUE expresion
    (29) expresion -> . expresion MAYORQUE expresion
    (30) expresion -> . expresion IGUALIGUAL expresion
    (31) expresion -> . expresion DIFERENTE expresion
    (32) expresion -> . expresion MAYORIGUAL expresion
    (33) expresion -> . expresion MENORIGUAL expresion
    (34) expresion -> . expresion AND expresion
    (35) expresion -> . expresion OR expresion
    (36) expresion -> . MENOS expresion
    (37) expresion -> . NOT expresion
    (38) expresion -> . PARA expresion PARC
    (39) expresion -> . ID
    (40) expresion -> . CHARACTER
    (41) expresion -> . BOOLEANO
    (42) expresion -> . ENTERO
    (43) expresion -> . DECIMAL
    (44) expresion -> . CADENA

    MENOS           shift and go to state 29
    NOT             shift and go to state 30
    PARA            shift and go to state 27
    ID              shift and go to state 31
    CHARACTER       shift and go to state 32
    BOOLEANO        shift and go to state 33
    ENTERO          shift and go to state 34
    DECIMAL         shift and go to state 35
    CADENA          shift and go to state 36

    expresion                      shift and go to state 38

state 26

    (15) if_instr -> RIF PARA . expresion PARC LLAVEA instrucciones LLAVEC
    (16) if_instr -> RIF PARA . expresion PARC LLAVEA instrucciones LLAVEC RELSE LLAVEA instrucciones LLAVEC
    (17) if_instr -> RIF PARA . expresion PARC LLAVEA instrucciones LLAVEC RELSE if_instr
    (22) expresion -> . expresion MAS expresion
    (23) expresion -> . expresion MENOS expresion
    (24) expresion -> . expresion POR expresion
    (25) expresion -> . expresion DIV expresion
    (26) expresion -> . expresion POT expresion
    (27) expresion -> . expresion MOD expresion
    (28) expresion -> . expresion MENORQUE expresion
    (29) expresion -> . expresion MAYORQUE expresion
    (30) expresion -> . expresion IGUALIGUAL expresion
    (31) expresion -> . expresion DIFERENTE expresion
    (32) expresion -> . expresion MAYORIGUAL expresion
    (33) expresion -> . expresion MENORIGUAL expresion
    (34) expresion -> . expresion AND expresion
    (35) expresion -> . expresion OR expresion
    (36) expresion -> . MENOS expresion
    (37) expresion -> . NOT expresion
    (38) expresion -> . PARA expresion PARC
    (39) expresion -> . ID
    (40) expresion -> . CHARACTER
    (41) expresion -> . BOOLEANO
    (42) expresion -> . ENTERO
    (43) expresion -> . DECIMAL
    (44) expresion -> . CADENA

    MENOS           shift and go to state 29
    NOT             shift and go to state 30
    PARA            shift and go to state 27
    ID              shift and go to state 31
    CHARACTER       shift and go to state 32
    BOOLEANO        shift and go to state 33
    ENTERO          shift and go to state 34
    DECIMAL         shift and go to state 35
    CADENA          shift and go to state 36

    expresion                      shift and go to state 39

state 27

    (38) expresion -> PARA . expresion PARC
    (22) expresion -> . expresion MAS expresion
    (23) expresion -> . expresion MENOS expresion
    (24) expresion -> . expresion POR expresion
    (25) expresion -> . expresion DIV expresion
    (26) expresion -> . expresion POT expresion
    (27) expresion -> . expresion MOD expresion
    (28) expresion -> . expresion MENORQUE expresion
    (29) expresion -> . expresion MAYORQUE expresion
    (30) expresion -> . expresion IGUALIGUAL expresion
    (31) expresion -> . expresion DIFERENTE expresion
    (32) expresion -> . expresion MAYORIGUAL expresion
    (33) expresion -> . expresion MENORIGUAL expresion
    (34) expresion -> . expresion AND expresion
    (35) expresion -> . expresion OR expresion
    (36) expresion -> . MENOS expresion
    (37) expresion -> . NOT expresion
    (38) expresion -> . PARA expresion PARC
    (39) expresion -> . ID
    (40) expresion -> . CHARACTER
    (41) expresion -> . BOOLEANO
    (42) expresion -> . ENTERO
    (43) expresion -> . DECIMAL
    (44) expresion -> . CADENA

    MENOS           shift and go to state 29
    NOT             shift and go to state 30
    PARA            shift and go to state 27
    ID              shift and go to state 31
    CHARACTER       shift and go to state 32
    BOOLEANO        shift and go to state 33
    ENTERO          shift and go to state 34
    DECIMAL         shift and go to state 35
    CADENA          shift and go to state 36

    expresion                      shift and go to state 40

state 28

    (11) imprimir_instr -> RPRINT PARA expresion . PARC PUNTOCOMA
    (12) imprimir_instr -> RPRINT PARA expresion . PARC
    (22) expresion -> expresion . MAS expresion
    (23) expresion -> expresion . MENOS expresion
    (24) expresion -> expresion . POR expresion
    (25) expresion -> expresion . DIV expresion
    (26) expresion -> expresion . POT expresion
    (27) expresion -> expresion . MOD expresion
    (28) expresion -> expresion . MENORQUE expresion
    (29) expresion -> expresion . MAYORQUE expresion
    (30) expresion -> expresion . IGUALIGUAL expresion
    (31) expresion -> expresion . DIFERENTE expresion
    (32) expresion -> expresion . MAYORIGUAL expresion
    (33) expresion -> expresion . MENORIGUAL expresion
    (34) expresion -> expresion . AND expresion
    (35) expresion -> expresion . OR expresion

    PARC            shift and go to state 41
    MAS             shift and go to state 42
    MENOS           shift and go to state 43
    POR             shift and go to state 44
    DIV             shift and go to state 45
    POT             shift and go to state 46
    MOD             shift and go to state 47
    MENORQUE        shift and go to state 48
    MAYORQUE        shift and go to state 49
    IGUALIGUAL      shift and go to state 50
    DIFERENTE       shift and go to state 51
    MAYORIGUAL      shift and go to state 52
    MENORIGUAL      shift and go to state 53
    AND             shift and go to state 54
    OR              shift and go to state 55


state 29

    (36) expresion -> MENOS . expresion
    (22) expresion -> . expresion MAS expresion
    (23) expresion -> . expresion MENOS expresion
    (24) expresion -> . expresion POR expresion
    (25) expresion -> . expresion DIV expresion
    (26) expresion -> . expresion POT expresion
    (27) expresion -> . expresion MOD expresion
    (28) expresion -> . expresion MENORQUE expresion
    (29) expresion -> . expresion MAYORQUE expresion
    (30) expresion -> . expresion IGUALIGUAL expresion
    (31) expresion -> . expresion DIFERENTE expresion
    (32) expresion -> . expresion MAYORIGUAL expresion
    (33) expresion -> . expresion MENORIGUAL expresion
    (34) expresion -> . expresion AND expresion
    (35) expresion -> . expresion OR expresion
    (36) expresion -> . MENOS expresion
    (37) expresion -> . NOT expresion
    (38) expresion -> . PARA expresion PARC
    (39) expresion -> . ID
    (40) expresion -> . CHARACTER
    (41) expresion -> . BOOLEANO
    (42) expresion -> . ENTERO
    (43) expresion -> . DECIMAL
    (44) expresion -> . CADENA

    MENOS           shift and go to state 29
    NOT             shift and go to state 30
    PARA            shift and go to state 27
    ID              shift and go to state 31
    CHARACTER       shift and go to state 32
    BOOLEANO        shift and go to state 33
    ENTERO          shift and go to state 34
    DECIMAL         shift and go to state 35
    CADENA          shift and go to state 36

    expresion                      shift and go to state 56

state 30

    (37) expresion -> NOT . expresion
    (22) expresion -> . expresion MAS expresion
    (23) expresion -> . expresion MENOS expresion
    (24) expresion -> . expresion POR expresion
    (25) expresion -> . expresion DIV expresion
    (26) expresion -> . expresion POT expresion
    (27) expresion -> . expresion MOD expresion
    (28) expresion -> . expresion MENORQUE expresion
    (29) expresion -> . expresion MAYORQUE expresion
    (30) expresion -> . expresion IGUALIGUAL expresion
    (31) expresion -> . expresion DIFERENTE expresion
    (32) expresion -> . expresion MAYORIGUAL expresion
    (33) expresion -> . expresion MENORIGUAL expresion
    (34) expresion -> . expresion AND expresion
    (35) expresion -> . expresion OR expresion
    (36) expresion -> . MENOS expresion
    (37) expresion -> . NOT expresion
    (38) expresion -> . PARA expresion PARC
    (39) expresion -> . ID
    (40) expresion -> . CHARACTER
    (41) expresion -> . BOOLEANO
    (42) expresion -> . ENTERO
    (43) expresion -> . DECIMAL
    (44) expresion -> . CADENA

    MENOS           shift and go to state 29
    NOT             shift and go to state 30
    PARA            shift and go to state 27
    ID              shift and go to state 31
    CHARACTER       shift and go to state 32
    BOOLEANO        shift and go to state 33
    ENTERO          shift and go to state 34
    DECIMAL         shift and go to state 35
    CADENA          shift and go to state 36

    expresion                      shift and go to state 57

state 31

    (39) expresion -> ID .

    PARC            reduce using rule 39 (expresion -> ID .)
    MAS             reduce using rule 39 (expresion -> ID .)
    MENOS           reduce using rule 39 (expresion -> ID .)
    POR             reduce using rule 39 (expresion -> ID .)
    DIV             reduce using rule 39 (expresion -> ID .)
    POT             reduce using rule 39 (expresion -> ID .)
    MOD             reduce using rule 39 (expresion -> ID .)
    MENORQUE        reduce using rule 39 (expresion -> ID .)
    MAYORQUE        reduce using rule 39 (expresion -> ID .)
    IGUALIGUAL      reduce using rule 39 (expresion -> ID .)
    DIFERENTE       reduce using rule 39 (expresion -> ID .)
    MAYORIGUAL      reduce using rule 39 (expresion -> ID .)
    MENORIGUAL      reduce using rule 39 (expresion -> ID .)
    AND             reduce using rule 39 (expresion -> ID .)
    OR              reduce using rule 39 (expresion -> ID .)
    PUNTOCOMA       reduce using rule 39 (expresion -> ID .)
    error           reduce using rule 39 (expresion -> ID .)
    RPRINT          reduce using rule 39 (expresion -> ID .)
    ID              reduce using rule 39 (expresion -> ID .)
    RIF             reduce using rule 39 (expresion -> ID .)
    RINT            reduce using rule 39 (expresion -> ID .)
    RFLOAT          reduce using rule 39 (expresion -> ID .)
    RSTRING         reduce using rule 39 (expresion -> ID .)
    RBOOLEAN        reduce using rule 39 (expresion -> ID .)
    $end            reduce using rule 39 (expresion -> ID .)
    LLAVEC          reduce using rule 39 (expresion -> ID .)


state 32

    (40) expresion -> CHARACTER .

    PARC            reduce using rule 40 (expresion -> CHARACTER .)
    MAS             reduce using rule 40 (expresion -> CHARACTER .)
    MENOS           reduce using rule 40 (expresion -> CHARACTER .)
    POR             reduce using rule 40 (expresion -> CHARACTER .)
    DIV             reduce using rule 40 (expresion -> CHARACTER .)
    POT             reduce using rule 40 (expresion -> CHARACTER .)
    MOD             reduce using rule 40 (expresion -> CHARACTER .)
    MENORQUE        reduce using rule 40 (expresion -> CHARACTER .)
    MAYORQUE        reduce using rule 40 (expresion -> CHARACTER .)
    IGUALIGUAL      reduce using rule 40 (expresion -> CHARACTER .)
    DIFERENTE       reduce using rule 40 (expresion -> CHARACTER .)
    MAYORIGUAL      reduce using rule 40 (expresion -> CHARACTER .)
    MENORIGUAL      reduce using rule 40 (expresion -> CHARACTER .)
    AND             reduce using rule 40 (expresion -> CHARACTER .)
    OR              reduce using rule 40 (expresion -> CHARACTER .)
    PUNTOCOMA       reduce using rule 40 (expresion -> CHARACTER .)
    error           reduce using rule 40 (expresion -> CHARACTER .)
    RPRINT          reduce using rule 40 (expresion -> CHARACTER .)
    ID              reduce using rule 40 (expresion -> CHARACTER .)
    RIF             reduce using rule 40 (expresion -> CHARACTER .)
    RINT            reduce using rule 40 (expresion -> CHARACTER .)
    RFLOAT          reduce using rule 40 (expresion -> CHARACTER .)
    RSTRING         reduce using rule 40 (expresion -> CHARACTER .)
    RBOOLEAN        reduce using rule 40 (expresion -> CHARACTER .)
    $end            reduce using rule 40 (expresion -> CHARACTER .)
    LLAVEC          reduce using rule 40 (expresion -> CHARACTER .)


state 33

    (41) expresion -> BOOLEANO .
